--- a/Laboratorijske_vaje/Vaja4/HTML/notranjiCSS.html
+++ b/Laboratorijske_vaje/Vaja4/HTML/notranjiCSS.html
@@ -13,7 +13,7 @@
 <h1>Pametni pozivnik</h1>
 <h2>Predstavitev</h2>
 <p>Namen projekta je narediti pametni gasilski pozivnik, za alarmiranje gasilcev ob gasilski intervenciji. Projekt obsega fizični radijski sprejemnik, ki prejme poziv in ga posreduje mobilni aplikaciji. Ta na podlagi nastavitev, ki jih nastavi gasilec, oblikuje obvestilo o pozivu.</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpos5G9ApQetwEQy24E1v1ZQYhxWQaQCAyJ58R7gDZb_sp3MO5hnulu1sSW6hs-qC2EEI&usqp=CAU" alt="Slika Pozivnika" width="402" height="316">
+<img src="https://f005.backblazeb2.com/b2api/v1/b2_download_file_by_id?fileId=4_z816d561d0804d6d384b60418_f1017e6c5ce916ee3_d20231117_m112557_c005_v0501011_t0008_u01700220357653" alt="Slika Pozivnika" width="402" height="316">
 <a href="https://github.com/puhi0210/Telekomunikacijski_protokoli/tree/main/Projekt">Povezava na GitHub</a>
 </p>
 
